--- a/index.css
+++ b/index.css
@@ -45,3 +45,36 @@ ol > li {
 	border-top: none;
 }
 	
+/* Hiding the checkbox, but allowing it to be focused */
+.badgebox
+{
+    opacity: 0;
+}
+
+.btn-primary {
+	margin-right: 5px;
+	margin-left: 5px;
+}
+
+.btn-success {
+	border-radius: 4px !important;
+	margin: 8px;
+}
+
+.form-inline .input-digits {
+	width:50px !important;
+	cursor: default;
+}
+
+.btn-group {
+	background-color: #eee;
+	border-color: #ccc;
+	width: 40px;
+	height: 34px;
+}
+
+.btn-inline {
+	border-radius: 0;
+	border-right: 0;
+	margin-right:0;
+}
